# Y86

./: .gitignore  CMakeLists.txt
asm/: combination.asm  combinationB.asm  compile_error_1.asm  div_zero.asm  double_fault.asm  eflags_test.asm  exceptions.asm  forward_priority.asm  function_call.asm  invalid_jump.asm  invalid_jumpB.asm  jmp.asm  memory.asm  movement.asm  negative_numbers.asm  nop.asm  pop_hazard.asm  pseudos.asm  stack.asm  unterminated.asm
src/: Assembler.cpp  Assembler.h  CMakeLists.txt  CodeListModel.cpp  CodeListModel.h  Components.qrc  HexWidget.cpp  HexWidget.h  MainWindow.cpp  MainWindow.h  Memory.cpp  Memory.h  Register.cpp  Register.h  RegisterViewer.cpp  RegisterViewer.h  StackListModel.cpp  StackListModel.h  StageViewer.cpp  StageViewer.h  VM.cpp  VM.h  VMWorker.cpp  VMWorker.h  Wire.cpp  Wire.h  main.cpp
src/as/: CMakeLists.txt  as.cpp  as.h  segment.cpp  segment.h
src/components/: Definitions.js  Stage_D.js  Stage_E.js  Stage_F.js  Stage_M.js  Stage_W.js
src/gui/: Assembler.cpp  Assembler.h  CMakeLists.txt  Memory.cpp  Memory.h  Segment.cpp  Segment.h  StageViewer.cpp  VM.cpp  VM.h  VMWorker.cpp  VMWorker.h  Wire.cpp  Wire.h
src/gui/components/: Stage_F.js
